--- a/v2/patrodent/templates/templates/after_before/inc.estetica.html
+++ b/v2/patrodent/templates/templates/after_before/inc.estetica.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <div class="wrapper indent-bot2 afterAndBefore">
     <figure class="img-style img-indent"><img src="{% static 'images/estetica_despues_2.jpg' %}" alt="Caso real odontología conservadora" title="Caso real odontología conservadora" class="after" />
         <span class="afterBeforeText">Después</span>
