--- a/v2/patrodent/templates/templates/inc.tratamientos.html
+++ b/v2/patrodent/templates/templates/inc.tratamientos.html
@@ -1,12 +1,12 @@
-{% url template_view "ortodoncia" as ortodoncia_url %}
-{% url template_view "odontologia" as odontologia_url %}
-{% url template_view "odontopediatria" as odontopediatria_url %}
-{% url template_view "periodoncia" as periodoncia_url %}
-{% url template_view "implantes" as implantes_url %}
-{% url template_view "protesis" as protesis_url %}
-{% url template_view "estetica" as estetica_url %}
-{% url template_view "atm" as atm_url %}
-{% url template_view "endodoncia" as endodoncia_url %}
+{% url 'template_view' "ortodoncia" as ortodoncia_url %}
+{% url 'template_view' "odontologia" as odontologia_url %}
+{% url 'template_view' "odontopediatria" as odontopediatria_url %}
+{% url 'template_view' "periodoncia" as periodoncia_url %}
+{% url 'template_view' "implantes" as implantes_url %}
+{% url 'template_view' "protesis" as protesis_url %}
+{% url 'template_view' "estetica" as estetica_url %}
+{% url 'template_view' "atm" as atm_url %}
+{% url 'template_view' "endodoncia" as endodoncia_url %}
 <li><a href="{{ odontologia_url }}" {% ifequal odontologia_url full_path %} class="active"{% endifequal %}><i></i>Odontología General</a></li>
 <li><a href="{{ endodoncia_url }}" {% ifequal endodoncia_url full_path %} class="active"{% endifequal %}><i></i>Endodoncia</a></li>
 <li><a href="{{ odontopediatria_url }}" {% ifequal odontopediatria_url full_path %} class="active"{% endifequal %}><i></i>Odontopediatría</a></li>
