--- a/v2/patrodent/templates/templates/tratamiento.html
+++ b/v2/patrodent/templates/templates/tratamiento.html
@@ -1,4 +1,5 @@
 {% extends "templates/base.html" %}
+
 {% load static %}
 
 {% block class-tratamientos-link %} active{% endblock %}
@@ -27,7 +28,7 @@
                     <div class="alpha grid_23">
                         <div class="indent-l">
                             <div>
-                                <div class="title"><a href="{% url template_view "tratamientos" %}">Tratamientos</a></div>
+                                <div class="title"><a href="{% url 'template_view' "tratamientos" %}">Tratamientos</a></div>
                                 <ul class="list-1 columns3">
                                     {% include "templates/inc.tratamientos.html" %}
                                 </ul>
