--- a/v2/patrodent/templates/implantes.html
+++ b/v2/patrodent/templates/implantes.html
@@ -1,5 +1,7 @@
 {% extends "templates/tratamiento.html" %}
 
+{% load static %}
+
 {% block keywords %}Implantes, Implantes Sevilla, protesis fija, coronas, cerámica{% endblock %}
 
 {% block metadescription %}Los implantes son la manera más natural de sustituir dientes perdidos.{% endblock %}
@@ -28,14 +30,14 @@
 
 {% block before-after %}
     <div class="wrapper indent-bot2">
-        <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/implante_panorex.jpg" alt="Implante panorex" title="Implante panorex"/>
+        <figure class="img-style img-indent"><img src="{% static 'images/implante_panorex.jpg' %}" alt="Implante panorex" title="Implante panorex"/>
             <span class="afterBeforeText">Implante panorex</span>
         </figure>
     </div>
     <div class="wrapper indent-bot2">
         <figure class="img-style img-indent">
             <a href="https://www.youtube.com/watch?v=M74Scwr4v7s" title="Video Implantes Dentales" target="_blank">
-                <img src="{{ STATIC_URL }}images/video_implantes.jpg" alt="Video Implantes Dentales" title="Video Implantes Dentales" />
+                <img src="{% static 'images/video_implantes.jpg' %}" alt="Video Implantes Dentales" title="Video Implantes Dentales" />
             </a>
             <span class="afterBeforeText">Video Implantes Dentales</span>
         </figure>
