--- a/v2/patrodent/templates/index-2.html
+++ b/v2/patrodent/templates/index-2.html
@@ -1,5 +1,7 @@
 {% extends "templates/base.html" %}
 
+{% load static %}
+
 {% block content %}
     <div class="wrapper">
         <div class="alpha prefix_1 grid_7">
@@ -7,7 +9,7 @@
                 <h3 class="p3">Cosmetic Dentistry</h3>
                 <div class="border-2">
                     <div class="wrapper">
-                        <figure class="img-indent3"><img src="{{ STATIC_URL }}images/pic1.png" alt="" /></figure>
+                        <figure class="img-indent3"><img src="{% static 'images/pic1.png' %}" alt="" /></figure>
                         <div class="extra-wrap">
                             <strong class="style-2">Composite Fillings</strong>
                             Aliquam erat volutpat. In ullamcorper, ligula obortis susc.
@@ -16,7 +18,7 @@
                 </div>
                 <div class="border-2">
                     <div class="wrapper">
-                        <figure class="img-indent3"><img src="{{ STATIC_URL }}images/pic2.png" alt="" /></figure>
+                        <figure class="img-indent3"><img src="{% static 'images/pic2.png' %}" alt="" /></figure>
                         <div class="extra-wrap">
                             <strong class="style-2">Porcelain Crowns</strong>
                             In ulamcorper, ligula lobortis suscipit liber feugiat nunc.
@@ -24,7 +26,7 @@
                     </div>
                 </div>
                 <div class="wrapper indent-bot2">
-                    <figure class="img-indent3"><img src="{{ STATIC_URL }}images/pic3.png" alt="" /></figure>
+                    <figure class="img-indent3"><img src="{% static 'images/pic3.png' %}" alt="" /></figure>
                     <div class="extra-wrap">
                         <strong class="style-2">Dental Implants</strong>
                         Feugiat nunc, a cona equat tellus nibh eges proin ut tinc.
@@ -52,7 +54,7 @@
         <div class="grid_15 suffix_1 omega">
             <h3 class="p3">Computerized Smile Design</h3>
             <div class="wrapper p8">
-                <figure class="img-style img-indent2"><img src="{{ STATIC_URL }}images/page3-img1.jpg" alt="" /></figure>
+                <figure class="img-style img-indent2"><img src="{% static 'images/page3-img1.jpg' %}" alt="" /></figure>
                 <div class="extra-wrap">
                     <h5 class="indent-bot">Fusce suscipit vaus mi, Cunsow ciis parturient montes.</h5>
                     Praesent vestibulum molestie lacus. Aenean nonumy hendrerit mauris. Phasellus porta. Fusce suscipit <br />varius mi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla dui. Fusce feugiat malesuada odio. Morbi nunc odio, <br />ravida at, cursus nec, luctus.
@@ -61,19 +63,19 @@
             <h3 class="margin-bot">Full Range of Cosmetic Dentistry Treatment </h3>
             <div class="wrapper">
                 <div class="col-1 indent-r">
-                    <figure class="img-style p3"><img src="{{ STATIC_URL }}images/page3-img2.jpg" alt="" /></figure>
+                    <figure class="img-style p3"><img src="{% static 'images/page3-img2.jpg' %}" alt="" /></figure>
                     <p>Praesent vestibulum molest ie lacus. Aenean nonumy hendrerit mauris. Phasellus porta. Fusce suscipit varius</p>
                     <p>Cum sociis natoque penat ibus et magnis dis parturient ridiculus mus. Nulla dui fusce feugia.</p>
                     <a class="button" href="#">read more</a>
                 </div>
                 <div class="col-2 indent-r">
-                <figure class="img-style p3"><img src="{{ STATIC_URL }}images/page3-img3.jpg" alt="" /></figure>
+                <figure class="img-style p3"><img src="{% static 'images/page3-img3.jpg' %}" alt="" /></figure>
                     <p>Nulla vel lacus a ipsum male Proin dictum tincidunt diam, eu tempus sapien vehic.</p>
                     <p>Aliquam ac purus quis ipsum m malesuada fermentum. In hac habitasse platea ictu- mst. Integer eu commodo justo ntesque laoreet.</p>
                     <a class="button" href="#">read more</a>
                 </div>
                 <div class="col-3">
-                <figure class="img-style p3"><img src="{{ STATIC_URL }}images/page3-img4.jpg" alt="" /></figure>
+                <figure class="img-style p3"><img src="{% static 'images/page3-img4.jpg' %}" alt="" /></figure>
                     <p>Imperdiet varius vel, feugiat pulvinar purus! Duis nec nisi augue. Nunc id risus ac.</p>
                     <p>Ipsum venenatis tincidunt. Proin nulla urna, porttitor nei accumsan eu, laoreet eu imperdiet malesuada. Nulla auctor, erat vitae.</p>
                     <a class="button" href="#">read more</a>
