--- a/v2/patrodent/templates/index-5.html
+++ b/v2/patrodent/templates/index-5.html
@@ -1,9 +1,11 @@
 {% extends "templates/base.html" %}
 
+{% load static %}
+
 {% block js %}
     {{ block.super }}
-    <script src="{{ STATIC_URL }}js/forms.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}js/jquery.googlemaps1.01.js" type="text/javascript"></script>
+    <script src="{% static 'js/forms.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/jquery.googlemaps1.01.js' %}" type="text/javascript"></script>
     <script src="https://maps.google.com/maps?file=api&amp;v=2&amp;hl=en&amp;sensor=true&amp;key=ABQIAAAAWCGzSMrk7YDL2KSdECDFthRCU6CW1wRB4NQsX5PSi053h5zzZhQIZ5ivn4VAQx53xyYuNrvkOmgO1w" type="text/javascript"></script>
     <script type="text/javascript">
 		$(document).ready(function() {
