--- a/v2/patrodent/templates/odontopediatria.html
+++ b/v2/patrodent/templates/odontopediatria.html
@@ -1,5 +1,7 @@
 {% extends "templates/tratamiento.html" %}
 
+{% load static %}
+
 {% block title %}Odontopediatría - {% endblock %}
 
 {% block content-title %}Odontopediatría{% endblock %}
@@ -30,11 +32,11 @@
 
 {% block before-after %}
     <div class="wrapper indent-bot2">
-        <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/odontopediatria1.jpg" alt="Odontopediatría 1" title="Odontopediatría 1"/>
+        <figure class="img-style img-indent"><img src="{% static 'images/odontopediatria1.jpg' %}" alt="Odontopediatría 1" title="Odontopediatría 1"/>
         </figure>
     </div>
     <div class="wrapper indent-bot2">
-        <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/odontopediatria2.jpg" alt="Odontopediatría 2" title="Odontopediatría 2"/>
+        <figure class="img-style img-indent"><img src="{% static 'images/odontopediatria2.jpg' %}" alt="Odontopediatría 2" title="Odontopediatría 2"/>
         </figure>
     </div>
 {% endblock %}
