--- a/v2/patrodent/templates/templates/servicio.html
+++ b/v2/patrodent/templates/templates/servicio.html
@@ -1,5 +1,7 @@
 {% extends "templates/base.html" %}
+
 {% load static %}
+
 {% block class-servicios-link %} active{% endblock %}
 
 {% block footerjs %}
@@ -26,7 +28,7 @@
                     <div class="alpha grid_23">
                         <div class="indent-l">
                             <div>
-                                <div class="title"><a href="{% url template_view "servicios" %}">Servicios</a></div>
+                                <div class="title"><a href="">Servicios</a></div>
                                 <ul class="list-1 columns3">
                                     {% include "templates/inc.servicios.html" %}
                                 </ul>
