--- a/v2/patrodent/templates/implantes.html
+++ b/v2/patrodent/templates/implantes.html
@@ -6,6 +6,12 @@
 
 {% block metadescription %}Los implantes son la manera más natural de sustituir dientes perdidos.{% endblock %}
 
+{% block meta %}
+<meta property="og:title" content="Cirugía oral e implantes" />
+<meta property="og:url" content="http{% if request.is_secure %}{% endif %}://{% url 'template_view' 'implantes' %}">
+<meta property="og:description" content="Los implantes son la manera más natural de sustituir dientes perdidos.">
+{% endblock %}
+
 {% block title %}Cirugía oral e implantes - {% endblock %}
 
 {% block content-title %}Cirugía oral e implantes{% endblock %}
