--- a/v2/patrodent/templates/odontologia.html
+++ b/v2/patrodent/templates/odontologia.html
@@ -4,6 +4,12 @@
 
 {% block metadescription %}La odontología conservadora y restauradora nos permite prevenir, detener y curar las caries dentales{% endblock %}
 
+{% block meta %}
+<meta property="og:title" content="Odontología General / Estética " />
+<meta property="og:url" content="{% url 'template_view' 'odontologia' %}">
+<meta property="og:description" content="La odontología conservadora y restauradora nos permite prevenir, detener y curar las caries dentales">
+{% endblock %}
+
 {% block title %}Odontología General / Estética - {% endblock %}
 
 {% block content-title %}Odontología General - Estética{% endblock %}
