--- a/v2/patrodent/templates/ortodoncia.html
+++ b/v2/patrodent/templates/ortodoncia.html
@@ -4,6 +4,12 @@
 
 {% block metadescription %}La ortodoncia es una especialidad de la odontología que se encarga de estudiar y corregir las malposiciones y maloclusiones dentarias{% endblock %}
 
+{% block meta %}
+<meta property="og:title" content="Ortodoncia" />
+<meta property="og:url" content="http{% if request.is_secure %}{% endif %}://{% url 'template_view' 'ortodoncia' %}">
+<meta property="og:description" content="La ortodoncia es una especialidad de la odontología que se encarga de estudiar y corregir las malposiciones y maloclusiones dentarias">
+{% endblock %}
+
 {% block title %}Ortodoncia - {% endblock %}
 
 {% block content-title %}Ortodoncia{% endblock %}
