--- a/v2/patrodent/templates/plan-salud.html
+++ b/v2/patrodent/templates/plan-salud.html
@@ -2,8 +2,13 @@
 
 {% block metadescription %}Plan de Salud Bucodental de la Junta de Andalucía{% endblock %}
 
-{% block title %}Plan de Salud Bucodental de la Junta de Andalucía - {% endblock %}
+{% block meta %}
+<meta property="og:title" content="Plan de Salud Bucodental de la Junta de Andalucía" />
+<meta property="og:url" content="http{% if request.is_secure %}{% endif %}://{{ request.get_host }}{% url 'template_view' 'plan-salud' %}">
+<meta property="og:description" content="Plan de Salud Bucodental de la Junta de Andalucía">
+{% endblock %}
 
+{% block title %}Plan de Salud Bucodental de la Junta de Andalucía - {% endblock %}
 
 {% block content-body-wrapper %}
     <div class="alpha prefix_1 grid_22">
