--- a/v2/patrodent/templates/software-ortodoncia.html
+++ b/v2/patrodent/templates/software-ortodoncia.html
@@ -4,6 +4,12 @@
 
 {% block metadescription %}Software digital de ortodoncia.{% endblock %}
 
+{% block meta %}
+<meta property="og:title" content="Software digital de ortodoncia" />
+<meta property="og:url" content="{% url 'template_view' 'software-ortodoncia' %}">
+<meta property="og:description" content="Software digital de ortodoncia.">
+{% endblock %}
+
 {% block title %}Software digital de ortodoncia - {% endblock %}
 
 {% block content-title %}Software digital de ortodoncia{% endblock %}
