--- a/v2/patrodent/templates/templates/base.html
+++ b/v2/patrodent/templates/templates/base.html
@@ -10,6 +10,9 @@
     <link type="image/gif" href="{% static 'images/favicon.ico' %}" rel="shortcut icon" />
     <meta name="Keywords" content="{% block keywords %}Dentistas en Sevilla, Dentistas, Sevilla, Odontologos Sevilla, Odontologos, Dentistas plaza de armas, Denstistas centro de Sevilla, Clinica Dental Sevilla, Clinica Dental, Ortodoncia Sevilla, Ortodoncia, Odontología Sevilla, Odontologia, ATM, Periodoncia, ATM Sevilla, Periodoncia Sevilla, plaza de armas{% endblock %}">
     <meta name="Description" content="{% block metadescription %}Clínica Dental Patrocinio Gómez Martínez C/ Marques de Paradas nº 22 1 º dcha Sevilla (junto a plaza de armas){% endblock %}">
+    <meta property="og:locale" content="es_ES" />
+    <meta property="og:site_name" content="Clínica Dental Patrodent" />
+    {% block meta %}{% endblock%}
    {% block css %}
     <link rel="stylesheet" href="{% static 'css/reset.css' %}" type="text/css" media="all">
     <link rel="stylesheet" href="{% static 'css/grid.css' %}" type="text/css" media="all">
@@ -86,6 +89,8 @@
           })(jQuery);
     </script>
    {% endblock %}
+    <!--METADATA LINE-->
+    <script type="application/ld+json">{"@context":"http://schema.org","@type":"Organization","name":"Clinica dental Patrodent","url":"https://www.patrodent.com","address":"Marqués de Paradas 22 1 º dcha 41001 Sevilla","sameAs":["https://www.facebook.com/patrodent.patrodent", "https://www.instagram.com/clinicadentalpatrodent/", "https://www.doctoralia.es/clinicas/clinica-dental-patrodent"]}</script>
    {% block iejs %}
     <!--[if IE]>
     <style type="text/css">
@@ -117,7 +122,7 @@
             <li class="index">
                 <a href="{% url 'template_view' 'index' %}" class="{% block class-patrodent-link2 %}{% endblock %}">Clínica</a>
                 <ul>
-                    <li class="whoWeAre"><a href="{% url 'template_view' 'quienes_somos' %}">Quienes somos</a></li>
+                    <li class="whoWeAre"><a href="{% url 'template_view' 'quienes-somos' %}">Quienes somos</a></li>
                     <li class="KnowUs"><a href="{% url 'template_view' "conocenos" %}">Conócenos</a></li>
                     <li class="Place"><a href="{% url 'template_view' "instalaciones" %}">Instalaciones</a></li>
                 </ul>
@@ -174,7 +179,7 @@
                                     <li>
                                         <a href="{% url 'template_view' "index" %}" class="{% block class-patrodent-link %}{% endblock %}">Clínica</a>
                                         <ul>
-                                            <li><a href="{% url 'template_view' "quienes_somos" %}">Quienes somos</a></li>
+                                            <li><a href="{% url 'template_view' "quienes-somos" %}">Quienes somos</a></li>
                                             <li class="KnowUs"><a href="{% url 'template_view' "conocenos" %}">Conocenos</a></li>
                                             <li><a href="{% url 'template_view' "instalaciones" %}">Instalaciones</a></li>
                                         </ul>
@@ -191,7 +196,7 @@
                                             {% include "templates/inc.tratamientos.html" %}
                                         </ul>
                                     </li>
-                                    <li><a href="{% url 'template_view' "antes_y_despues" %}" class="{% block class-antes-despues-link %}{% endblock %}">Antes y despues</a></li>
+                                    <li><a href="{% url 'template_view' "antes-y-despues" %}" class="{% block class-antes-despues-link %}{% endblock %}">Antes y despues</a></li>
                                     <li>
                                         <a href="{% url 'template_view' "contacto" %}" class="{% block class-contacto-link %}{% endblock %}">Contacto</a>
                                         <ul>
