--- a/v2/patrodent/templates/templates/base.html
+++ b/v2/patrodent/templates/templates/base.html
@@ -291,6 +291,7 @@
                                     <dd class="noLinkWhatsapp"><span>WhatsApp:</span><a class="link" href="https://api.whatsapp.com/send?phone=+34954211422&text=Hola%20quisiera%20hacerle%20una%20consulta" target="_blank">954 21 14 22</a></dd>
                                     <dd><span>Facebook:</span><a class="link" href="https://www.facebook.com/patrodent.patrodent" target="_blank">patrodent.patrodent</a></dd>
                                     <dd><span>Instagram:</span><a class="link" href="https://www.instagram.com/clinicadentalpatrodent/" target="_blank">clinicadentalpatrodent</a></dd>
+                                    <dd><span>Doctoralia:</span><a class="ling" target="_blank" href="https://www.doctoralia.es/angela-martin-gomez/dentista/sevilla" rel="nofollow" data-zlw-doctor="angela-martin-gomez">Angela Martin Gomez</a></dd>
                                 </dl>
                             </div>
                         </div>
